# win-script-launcher

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Cloudflare (1.1.1.1)  LICENSE  README.md  RELEASE_GUIDE.md  RELEASE_NOTES.md  build_exe.py  pyproject.toml  requirements.txt  script_launcher.py
.github/workflows/: ci.yml
docs/: CONTRIBUTING.md  PROJECT_STRUCTURE.md  RELEASE_GUIDE.md  RELEASE_NOTES.md
scripts/: _script_metadata.txt  always_numlock.bat  battery_health_report.bat  bluescreen_analyzer.bat  browser_cleaner.bat  cmd_pro_setup.bat  context_menu_cleaner.bat  cortana_edge_killer.bat  crash_investigator.bat  create_restore_point.bat  create_system_shortcuts.bat  desktop_organizer.bat  discord_stealth_cleaner.bat  disk_speed_test.bat  dns_benchmark.bat  dns_changer.bat  driver_backup_tool.bat  empty_downloads.bat  empty_folder_cleaner.bat  event_log_wiper.bat  explorer_restart_pro.bat  firewall_basic_hardener.bat  font_cache_rebuild.bat  fps_booster.bat  game_optimizer.bat  geo_bypass_dns.bat  ghost_driver_cleaner.bat  gpu_info_extra.bat  hosts_file_manager.bat  icon_cache_rebuild.bat  install_dev_tools.bat  install_essentials.bat  internet_hog_finder.bat  internet_stability_monitor.bat  ip_information.bat  iphone_nextdns_setup_guide.bat  keylogger_detector.bat  latency_nitro_fix.bat  low_latency_audio_fix.bat  mac_address_changer.bat  (+56 more)
scripts/assets/: bsod_event_log.ps1  bsod_minidump.ps1  bsod_statistics.ps1  common_backup.ps1  cortana_edge_killer_inline_1.ps1  crash_investigator_inline_1.ps1  crash_investigator_inline_2.ps1  crash_investigator_inline_3.ps1  create_restore_point_inline_1.ps1  create_system_shortcuts_inline_1.ps1  desktop_organizer_inline_1.ps1  disk_speed_test_inline_1.ps1  dns_benchmark_probe.ps1  driver_backup_tool_inline_1.ps1  empty_downloads_inline_1.ps1  empty_downloads_inline_2.ps1  empty_downloads_inline_3.ps1  empty_folder_cleaner_inline_1.ps1  geo_bypass_dns_inline_1.ps1  geo_bypass_dns_inline_2.ps1  ghost_driver_cleaner_inline_1.ps1  ghost_driver_cleaner_inline_2.ps1  gpu_info_extra_inline_1.ps1  internet_hog_finder_inline_1.ps1  keylogger_detector_inline_1.ps1  latency_nitro_fix_inline_1.ps1  log_critical_summary.ps1  log_export.ps1  log_recent_errors.ps1  log_top_repeating.ps1  mouse_jiggler_inline_1.ps1  path_cleaner_inline_1.ps1  ram_expert_info_inline_1.ps1  restore_point_manager_inline_1.ps1  search_rebuild_inline_1.ps1  set_dark_wallpaper_inline_1.ps1  speed_test_inline_1.ps1  speed_test_inline_2.ps1  ssd_lifetime_checker_inline_1.ps1  startup_manager_inline_1.ps1  (+13 more)
src/: __init__.py  app.py  config.py  exceptions.py  logger.py  models.py  script_executor.py  script_manager.py  validators.py
src/ui/: __init__.py  components.py  main_window.py  theme.py
src/utils/: __init__.py  admin.py  file_watcher.py  process.py
tests/: __init__.py  conftest.py  test_batch_scripts_static.py  test_config.py  test_integration.py  test_script_executor.py  test_script_manager.py  test_ui_safety.py  test_validators.py
